--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -1,16 +1,52 @@
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <link href="_CSS/bootstrap.css" rel="stylesheet">
     <title>Chicken Tracket</title>
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <a href="index.html" target="_self"><li>Home</li></a>
-            <a href="negocios.html" target="_self"><li>Negócios</li></a>
-            <a href="seus_negocio.html" target="_self"><li>Seus negócios</li></a>
-            <a href="login.html" target="_self"><li>Login</li></a>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">Chicken Tracker</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Negócios</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Seus Negócios </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#">Another action</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="#">Something else here</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+
+            </ul>
+
+            <ul class="navbar-nav ml-auto">
+                <li class="navbar-item">
+                    <a class="nav-link">Login</a>
+                </li>
+            </ul>
+
+            <form class="form-inline my-2 my-lg-0">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
+            </form>
+        </div>
     </nav>
+    <script src="_JS/jquery-3.3.1.js"></script>
+    <script src="_JS/bootstrap.js"></script>
 </body>
 </html>
