--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -1,16 +1,32 @@
 <html>
 <head>
-    <meta charset="utf-8"/>
+    <meta charset="utf-8" />
+    <link href="_CSS/bootstrap.css" rel="stylesheet">
     <title>Chicken Tracket</title>
 </head>
+
 <body>
-    <nav>
-        <ul>
-            <a href="index.html" target="_self"><li>Home</li></a>
-            <a href="negocios.html" target="_self"><li>Negócios</li></a>
-            <a href="seus_negocio.html" target="_self"><li>Seus negócios</li></a>
-            <a href="login.html" target="_self"><li>Login</li></a>
-        </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html" target="_self">Chicken Tracker</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Negócios <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Seu Negócio</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#">Disabled</a>
+                </li>
+            </ul>
+        </div>
     </nav>
+    <script src="_JS/jquery-3.3.1.js"></script>
+    <script src="_JS/bootstrap.js"></script>
 </body>
 </html>
