--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -9,23 +9,35 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html" target="_self">Chicken Tracker</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+        <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Negócios <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link" href="#">Seu Negócio</a>
                 </li>
 
-                <li class="nav-item">
+                <li class="nav-item active">
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul>
         </div>
     </nav>
+    <div class="jumbotron fluid container">
+        <div>
+            <h1 class="display-4">Bem vindo!</h1>
+            <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+            <hr class="my-4">
+            <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+            <p class="lead">
+                <a class="btn btn-dark btn-lg" href="#" role="button">Learn more</a>
+            </p>
+        </div>
+    </div>
+
     <script src="_JS/jquery-3.3.1.js"></script>
     <script src="_JS/bootstrap.js"></script>
 </body>
