--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <link href="_CSS/bootstrap.css" rel="stylesheet">
+    <link href="_CSS/index.css" rel="stylesheet">
     <title>Chicken Tracket</title>
 </head>
 
@@ -12,10 +13,11 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Negócios <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Negócios</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Seu Negócio</a>
@@ -25,10 +27,19 @@
                     <a class="nav-link disabled" href="#">Disabled</a>
                 </li>
             </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Login</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link disabled" href="#">Cadastre-se</a>
+                </li>
+            </ul>
         </div>
+
     </nav>
-    <div class="jumbotron fluid container">
-        <div>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
             <h1 class="display-4">Bem vindo!</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
             <hr class="my-4">
