--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -16,23 +16,23 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Negócios</a>
                 </li>
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Seu Negócio</a>
                 </li>
 
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="#">Outro</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Outro</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
+                <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="#">Cadastre-se</a>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Cadastre-se</a>
                 </li>
             </ul>
         </div>
@@ -49,7 +49,9 @@
             </p>
         </div>
     </div>
+    <div class="container">
 
+    </div>
     <script src="_JS/jquery-3.3.1.js"></script>
     <script src="_JS/bootstrap.js"></script>
 </body>
