--- a/Chicken_Tracket/index.html
+++ b/Chicken_Tracket/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="utf-8" />
     <link href="_CSS/bootstrap.css" rel="stylesheet">
+    <link href="_CSS/mdb.css" rel="stylesheet">
     <link href="_CSS/index.css" rel="stylesheet">
     <title>Chicken Tracket</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html" target="_self">Chicken Tracker</a>
+        <a class="navbar-brand" href="index.html" target="_self">
+            <img src="img/icon.svg" height="30" width="30" alt="">Chicken Tracker</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,11 +51,121 @@
             </p>
         </div>
     </div>
-    <div class="container">
-
+    <div class="container conteudo">
+        <div class="secao">
+            <h1 class="text-center">Nosso Projeto</h1>
+        </div>
+        <hr class="my-4">
+        <div class="secao">
+            <h1 class="text-center">Colaboradores</h1>
+        </div>
+        <hr class="my-4">
+        <div class="secao">
+            <h1 class="text-center">A equipe</h1>
+        </div>
+        <hr class="my-4">
     </div>
+    <footer class="page-footer center-on-small-only stylish-color-dark">
+
+        <!--Footer Links-->
+        <div class="container">
+            <div class="row">
+
+                <!--First column-->
+                <div class="col-md-4">
+                    <h5 class="title mb-4 mt-3 font-bold">Footer Content</h5>
+                    <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                </div>
+                <!--/.First column-->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!--Second column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="title mb-4 mt-3 font-bold">Links</h5>
+                    <ul>
+                        <li><a href="#!">Link 1</a></li>
+                        <li><a href="#!">Link 2</a></li>
+                        <li><a href="#!">Link 3</a></li>
+                        <li><a href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+                <!--/.Second column-->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!--Third column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="title mb-4 mt-3 font-bold">Links</h5>
+                    <ul>
+                        <li><a href="#!">Link 1</a></li>
+                        <li><a href="#!">Link 2</a></li>
+                        <li><a href="#!">Link 3</a></li>
+                        <li><a href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+                <!--/.Third column-->
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <!--Fourth column-->
+                <div class="col-md-2 mx-auto">
+                    <h5 class="title mb-4 mt-3 font-bold ">Links</h5>
+                    <ul>
+                        <li><a href="#!">Link 1</a></li>
+                        <li><a href="#!">Link 2</a></li>
+                        <li><a href="#!">Link 3</a></li>
+                        <li><a href="#!">Link 4</a></li>
+                    </ul>
+                </div>
+                <!--/.Fourth column-->
+            </div>
+        </div>
+        <!--/.Footer Links-->
+
+        <hr>
+
+        <!--Call to action-->
+        <div class="call-to-action">
+            <ul>
+                <li>
+                    <h5 class="mb-1">Register for free</h5>
+                </li>
+                <li><a href="" class="btn btn-danger btn-rounded">Sign up!</a></li>
+            </ul>
+        </div>
+        <!--/.Call to action-->
+
+        <hr>
+
+        <!--Social buttons-->
+        <div class="social-section text-center">
+            <ul>
+
+                <li><a class="btn-floating btn-sm btn-fb"><i class="fa fa-facebook"> </i></a></li>
+                <li><a class="btn-floating btn-sm btn-tw"><i class="fa fa-twitter"> </i></a></li>
+                <li><a class="btn-floating btn-sm btn-gplus"><i class="fa fa-google-plus"> </i></a></li>
+                <li><a class="btn-floating btn-sm btn-li"><i class="fa fa-linkedin"> </i></a></li>
+                <li><a class="btn-floating btn-sm btn-dribbble"><i class="fa fa-dribbble"> </i></a></li>
+
+            </ul>
+        </div>
+        <!--/.Social buttons-->
+
+        <!--Copyright-->
+        <div class="footer-copyright">
+            <div class="container-fluid">
+                © 2017 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+
+            </div>
+        </div>
+        <!--/.Copyright-->
+
+    </footer>
     <script src="_JS/jquery-3.3.1.js"></script>
+    <script src="_JS/popper.min.js"></script>
     <script src="_JS/bootstrap.js"></script>
+    <script src="_JS/mdb.js"></script>
 </body>
 
 </html>
