--- a/Chicken_Tracker/index.html
+++ b/Chicken_Tracker/index.html
@@ -5,7 +5,7 @@
     <link href="_CSS/bootstrap.css" rel="stylesheet">
     <link href="_CSS/mdb.css" rel="stylesheet">
     <link href="_CSS/index.css" rel="stylesheet">
-    <title>Chicken Tracket</title>
+    <title>Chicken Tracker</title>
 </head>
 
 <body>
@@ -23,10 +23,6 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Seu Negócio</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Outro</a>
                 </li>
             </ul>
             <ul class="navbar-nav ml-auto">
@@ -65,15 +61,16 @@
         </div>
         <hr class="my-4">
     </div>
-    <footer class="page-footer center-on-small-only stylish-color-dark">
+    <!--Footer-->
+    <footer class="page-footer font-small stylish-color-dark pt-4 mt-4">
 
         <!--Footer Links-->
-        <div class="container">
+        <div class="container text-center text-md-left">
             <div class="row">
 
                 <!--First column-->
                 <div class="col-md-4">
-                    <h5 class="title mb-4 mt-3 font-bold">Footer Content</h5>
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Footer Content</h5>
                     <p>Here you can use rows and columns here to organize your footer content. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                 </div>
                 <!--/.First column-->
@@ -82,8 +79,8 @@
 
                 <!--Second column-->
                 <div class="col-md-2 mx-auto">
-                    <h5 class="title mb-4 mt-3 font-bold">Links</h5>
-                    <ul>
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Links</h5>
+                    <ul class="list-unstyled">
                         <li><a href="#!">Link 1</a></li>
                         <li><a href="#!">Link 2</a></li>
                         <li><a href="#!">Link 3</a></li>
@@ -96,8 +93,8 @@
 
                 <!--Third column-->
                 <div class="col-md-2 mx-auto">
-                    <h5 class="title mb-4 mt-3 font-bold">Links</h5>
-                    <ul>
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold">Links</h5>
+                    <ul class="list-unstyled">
                         <li><a href="#!">Link 1</a></li>
                         <li><a href="#!">Link 2</a></li>
                         <li><a href="#!">Link 3</a></li>
@@ -110,8 +107,8 @@
 
                 <!--Fourth column-->
                 <div class="col-md-2 mx-auto">
-                    <h5 class="title mb-4 mt-3 font-bold ">Links</h5>
-                    <ul>
+                    <h5 class="text-uppercase mb-4 mt-3 font-weight-bold ">Links</h5>
+                    <ul class="list-unstyled">
                         <li><a href="#!">Link 1</a></li>
                         <li><a href="#!">Link 2</a></li>
                         <li><a href="#!">Link 3</a></li>
@@ -126,12 +123,12 @@
         <hr>
 
         <!--Call to action-->
-        <div class="call-to-action">
-            <ul>
-                <li>
+        <div class="text-center py-3">
+            <ul class="list-unstyled list-inline mb-0">
+                <li class="list-inline-item">
                     <h5 class="mb-1">Register for free</h5>
                 </li>
-                <li><a href="" class="btn btn-danger btn-rounded">Sign up!</a></li>
+                <li class="list-inline-item"><a href="#!" class="btn btn-danger btn-rounded">Sign up!</a></li>
             </ul>
         </div>
         <!--/.Call to action-->
@@ -139,29 +136,28 @@
         <hr>
 
         <!--Social buttons-->
-        <div class="social-section text-center">
-            <ul>
-
-                <li><a class="btn-floating btn-sm btn-fb"><i class="fa fa-facebook"> </i></a></li>
-                <li><a class="btn-floating btn-sm btn-tw"><i class="fa fa-twitter"> </i></a></li>
-                <li><a class="btn-floating btn-sm btn-gplus"><i class="fa fa-google-plus"> </i></a></li>
-                <li><a class="btn-floating btn-sm btn-li"><i class="fa fa-linkedin"> </i></a></li>
-                <li><a class="btn-floating btn-sm btn-dribbble"><i class="fa fa-dribbble"> </i></a></li>
-
+        <div class="text-center">
+            <ul class="list-unstyled list-inline">
+                <li class="list-inline-item"><a class="btn-floating btn-sm btn-fb mx-1"><i class="fa fa-facebook"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-sm btn-tw mx-1"><i class="fa fa-twitter"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-sm btn-gplus mx-1"><i class="fa fa-google-plus"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-sm btn-li mx-1"><i class="fa fa-linkedin"> </i></a></li>
+                <li class="list-inline-item"><a class="btn-floating btn-sm btn-dribbble mx-1"><i class="fa fa-dribbble"> </i></a></li>
             </ul>
         </div>
         <!--/.Social buttons-->
 
         <!--Copyright-->
-        <div class="footer-copyright">
+        <div class="footer-copyright py-3 text-center">
             <div class="container-fluid">
-                © 2017 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
+                © 2017 Copyright: <a href="https://mdbootstrap.com/material-design-for-bootstrap/"> MDBootstrap.com </a>
 
             </div>
         </div>
         <!--/.Copyright-->
 
     </footer>
+    <!--/.Footer-->
     <script src="_JS/jquery-3.3.1.js"></script>
     <script src="_JS/popper.min.js"></script>
     <script src="_JS/bootstrap.js"></script>
