--- a/Chicken_Tracket/login.html
+++ b/Chicken_Tracket/login.html
@@ -3,30 +3,27 @@
 <head>
     <meta charset="utf-8" />
     <link href="_CSS/bootstrap.css" rel="stylesheet">
+    <link href="_CSS/login.css" rel="stylesheet">
     <title>Chicken Tracket</title>
 </head>
 
-<body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="index.html" target="_self">Chicken Tracker</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="negocios.html">Negócios <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="seu_negocio.html">Seu Negócio</a>
-                </li>
-
-                <li class="nav-item active">
-                    <a class="nav-link disabled" href="login.html">Disabled</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
+<body class="text-center">
+    <div class="jumbotron-login">
+        <form class="form-signin">
+            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
+            <label for="inputEmail" class="sr-only">Email address</label>
+            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+                <div class="checkbox mb-3">
+                    <label>
+                    <input type="checkbox" value="remember-me"> Remember me
+                    </label>
+                </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
+        </form>
+    </div>
     <script src="_JS/jquery-3.3.1.js"></script>
     <script src="_JS/bootstrap.js"></script>
 </body>
