--- a/Chicken_Tracker/index.html
+++ b/Chicken_Tracker/index.html
@@ -5,11 +5,11 @@
     <link href="_CSS/bootstrap.css" rel="stylesheet">
     <link href="_CSS/mdb.css" rel="stylesheet">
     <link href="_CSS/index.css" rel="stylesheet">
-    <title>Chicken Tracket</title>
+    <title>Chicken Tracker</title>
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html" target="_self">
             <img src="img/icon.svg" height="30" width="30" alt="">Chicken Tracker</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,13 +41,15 @@
 
     </nav>
     <div class="jumbotron jumbotron-fluid">
+        <div class="img"></div>
         <div class="container">
-            <h1 class="display-4">Bem vindo!</h1>
+            <h1 class="display-4">Mude a visão do seu negócio</h1>
             <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+
             <hr class="my-4">
             <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
             <p class="lead">
-                <a class="btn btn-dark btn-lg" href="#" role="button">Learn more</a>
+                <a class="btn btn-info btn-lg" href="#" role="button">Saiba mais</a>
             </p>
         </div>
     </div>
@@ -62,6 +64,48 @@
         <hr class="my-4">
         <div class="secao">
             <h1 class="text-center">A equipe</h1>
+            <div class="row">
+                <div class="col-lg-3 col-md-6">
+                    <div class="text-sm-center text-md-center">
+                        <a href="img/">
+                        <img class="rounded-circle" src="img/значок-фермера-п-оский-79310477.jpg" alt="Gabriel" style="width:80%">
+                        <div class="black-text">
+                        <p>Gabriel San Martin</p>
+                        </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="text-sm-center">
+                        <a href="/w3images/nature.jpg">
+                        <img class="rounded-circle" src="img/значок-фермера-п-оский-79310477.jpg" alt="Pedro" style="width:80%">
+                        <div class="black-text">
+                        <p>Pedro Vinicius</p>
+                        </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="text-sm-center">
+                        <a href="/w3images/fjords.jpg">
+                        <img class="rounded-circle" src="img/значок-фермера-п-оский-79310477.jpg" alt="Victor" style="width:80%">
+                        <div class="black-text">
+                        <p>Victor Yan</p>
+                        </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6">
+                    <div class="text-sm-center">
+                        <a href="/w3images/fjords.jpg">
+                        <img src="img/значок-фермера-п-оский-79310477.jpg" class="rounded-circle" alt="Wyller" style="width:80%">
+                        <div class="black-text">
+                        <p>Wyller Douglas</p>
+                        </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
         <hr class="my-4">
     </div>
@@ -129,9 +173,9 @@
         <div class="call-to-action">
             <ul>
                 <li>
-                    <h5 class="mb-1">Register for free</h5>
+                    <h5 class="mb-1">Cadastre-se agora mesmo</h5>
                 </li>
-                <li><a href="" class="btn btn-danger btn-rounded">Sign up!</a></li>
+                <li><a href="" class="btn btn-success btn-rounded">Entrar</a></li>
             </ul>
         </div>
         <!--/.Call to action-->
