--- a/Chicken_Tracker/login.html
+++ b/Chicken_Tracker/login.html
@@ -10,17 +10,17 @@
 <body class="text-center">
     <div class="jumbotron-login">
         <form class="form-signin">
-            <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-            <label for="inputEmail" class="sr-only">Email address</label>
+            <h1 class="h3 mb-3 font-weight-normal">Faça seu login</h1>
+            <label for="inputEmail" class="sr-only">Email</label>
             <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-            <label for="inputPassword" class="sr-only">Password</label>
+            <label for="inputPassword" class="sr-only">Senha</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                <div class="checkbox mb-3">
-                    <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                    </label>
-                </div>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+            <div class="checkbox mb-3">
+                <label>
+                    <input type="checkbox" value="remember-me"> Lembre-me
+                </label>
+            </div>
+            <button class="btn btn-lg btn-primary btn-block" type="submit">Entrar</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2017-2018</p>
         </form>
     </div>
